MMA-5669 signert dokumenter med Certificate